--- a/src/layouts/Home/ServicesSection.module.css
+++ b/src/layouts/Home/ServicesSection.module.css
@@ -16,6 +16,7 @@
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 20px;
+  color: var(--color-white);
 }
 
 .services > .container > p {
